--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,7 +70,8 @@
     z-index: 10;
 
     .gameContainer {
-        position: relative;
+        position: absolute;
+        background-color: rgba(255, 123, 0, 0.1);
     }
 }
 
