--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,7 +74,114 @@
         // background-color: rgba(255, 191, 117, 0.185);
     }
 
-    .cardPiles {
+    .topRow {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        right: 0;
+        top: 0;
+        left: 0;
+
+        .healthBar {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .health {
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+                max-height: 100%;
+                min-height: 100%;
+
+                .background {
+                    position: absolute;
+                    height: 25%;
+                    width: 97%;
+                    background-color: rgb(22, 22, 22);
+                    z-index: 1;
+
+                    .currentHealth {
+                        transition: width 0.5s ease-in-out;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        bottom: 0;
+                        background-color: rgb(6, 167, 0);
+                        z-index: 5;
+                    }
+                }
+
+                .left,
+                .middle,
+                .right {
+                    position: relative;
+                    height: 100%;
+                    max-height: 100%;
+                    min-height: 100%;
+                    z-index: 10;
+                }
+            }
+
+            .icon {
+                pointer-events: all;
+                transition: opacity 0.2s ease-in-out;
+                height: 100%;
+                max-height: 100%;
+                min-height: 100%;
+                z-index: 10;
+
+                &.filter {
+                    position: absolute;
+                    mix-blend-mode: multiply;
+                    opacity: 0.3;
+                }
+            }
+
+            .textContainer {
+                display: flex;
+                align-items: baseline;
+                justify-content: center;
+
+                .healthValue {
+                    font-weight: 600;
+                    width: unset;
+                }
+
+                .healthTotal {
+                    font-weight: 600;
+                    width: unset;
+                    opacity: 0.5;
+                }
+            }
+        }
+
+        .coins {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .icon {
+                pointer-events: all;
+                transition: opacity 0.2s ease-in-out;
+                height: 100%;
+                max-height: 100%;
+                min-height: 100%;
+            }
+
+            .coinNumber {
+                width: 100%;
+                font-weight: 600;
+                text-align: center;
+            }
+        }
+    }
+
+    .bottomRow {
         position: absolute;
         display: flex;
         align-items: center;
