--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,7 +71,7 @@
 
     .gameContainer {
         position: absolute;
-        // background-color: rgba(255, 191, 117, 0.185);
+        background-color: rgba(255, 191, 117, 0.185);
     }
 
     .topRow {
@@ -128,7 +128,6 @@
             }
 
             .icon {
-                pointer-events: all;
                 transition: opacity 0.2s ease-in-out;
                 height: 100%;
                 max-height: 100%;
@@ -165,7 +164,6 @@
             justify-content: center;
 
             .icon {
-                pointer-events: all;
                 transition: opacity 0.2s ease-in-out;
                 height: 100%;
                 max-height: 100%;
@@ -176,6 +174,25 @@
             .coinNumber {
                 font-weight: 600;
                 text-align: center;
+            }
+        }
+
+        .separator {
+            flex-grow: 1;
+        }
+
+        .button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            pointer-events: all;
+
+            .icon {
+                transition: opacity 0.2s ease-in-out;
+                height: 100%;
+                max-height: 100%;
+                min-height: 100%;
+                pointer-events: none;
             }
         }
     }
