--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,7 +71,7 @@
 
     .gameContainer {
         position: absolute;
-        // background-color: rgba(255, 191, 117, 0.185);
+        background-color: rgba(255, 191, 117, 0.185);
     }
 
     .topRow {
