--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -107,7 +107,7 @@
 
                     .currentHealth {
                         position: absolute;
-                        transition: width 0.5s ease-in-out;
+                        transition: width 0.2s ease-in-out;
                         top: 0;
                         bottom: 0;
                         left: 0;
@@ -220,6 +220,7 @@
 
             &.disabled {
                 opacity: 0;
+                pointer-events: none;
             }
 
             .icon {
